# discord_casino_bot

./: .flake8  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
requirements/: dev.txt  prod.txt
src/backend/: config.py  database.py  main.py
src/backend/api/: routers.py
src/backend/api/endpoints/: actors.py  movies.py
src/backend/backend/: settings.py
src/backend/casino_api/: apps.py  models.py
src/backend/core/: __init__.py  base.py  config.py  database.py
src/backend/crud/: discord_users.py
src/backend/discord_users/: apps.py  models.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 44b00024c84f_m2m_movies_actors.py  5efee8d2d739_.py  a3be328380f2_movies_and_actors.py  afa8cd1ae238_movies_and_actors.py  f3a63414099c_movies_and_actors.py
src/backend/models/: __init__.py  actors.py  discord_users.py  middle_tables.py  movies.py  movies_actors.py
src/backend/routers/: movies.py
src/backend/schemas/: actors.py  discord_users.py  movies.py  movies_actors.py
