[tool.poetry]
name = "discord-casino-bot"
version = "0.1.0"
description = ""
authors = ["NechepurenkoA <nechepurenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
alembic-postgresql-enum = "^1.3.0"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = ["**/migrations/*.py", "**/core/__init__.py"]
src_paths = ["src/"]
